[package]
name = "repulse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_keys"
path = "src/gen_keys/main.rs"

[dependencies]
base64 = "0.21.0"
is_elevated = "0.1.2"
lazy_static = "1.4.0"
libaes = "0.6.4"
mac_address = "1.1.4"
rand = "0.8.5"
rsa = "0.8.1"
rust-embed = { version = "6.4.2", features = ["compression"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
tasklist = "0.2.12"
winapi = { version = "0.3.9", features = [
    "winuser",
    "libloaderapi",
    "winbase",
] }
winreg = "0.10.1"
wmi = "0.11.4"

[build-dependencies]
embed-manifest = "1.3.1"
embed-resource = "1.8.0"

[profile.dev]
lto = true
debug = true
opt-level = 2
panic = "unwind"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
